Handle ajax requests in views.py

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -14,7 +14,7 @@
 
     <div class="row mb-3">
         <div class="col-md-4 mx-auto col-10">
-            <form class="form" method="POST" action="/create-tweet">
+            <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
                 {% csrf_token %}
                 <input type="hidden" value="/" name="next"/>
                 <textarea class="form-control" name="content" placeholder="Your tweet..."></textarea>
@@ -30,24 +30,60 @@
     </div>
 
     <script>
-    const tweetsElement = document.getElementById("tweets")
-    {#tweetsElement.innerHTML = 'Loading...'#}
-    {##}
-    {#var el1 = "<h1>Hi there 1!</h1>"#}
-    {#var el2 = "<h1>Hi there 2!</h1>"#}
-    {#var el3 = "<h1>Hi there 3 !</h1>"#}
-    {##}
-    {#tweetsElement.innerHTML = el1 + el2 + el3#}
 
-    const xhr = new XMLHttpRequest();
-    const method = 'GET';
-    const url = '/tweets';
-    const responseType = 'json';
+    function handleTweetCreateFormDidSubmit(event) {
+        event.preventDefault();
+        const myForm = event.target;
+        const myFormData = new FormData(myForm);
+        const url = myForm.getAttribute("action");
+        const method = myForm.getAttribute("method");
 
+        const xhr = new XMLHttpRequest();
+        xhr.open(method, url);
+        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest");
+        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+        xhr.onload = function () {
+            const tweetsEl = document.getElementById("tweets");
+            loadTweets(tweetsEl);
+        };
+        xhr.send(myFormData)
+    }
+
+    const tweetCreateFormEl = document.getElementById("tweet-create-form");
+
+    tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit)
+
+    const tweetsEl = document.getElementById("tweets");
+
+    function loadTweets(tweetsElement) {
+        const xhr = new XMLHttpRequest();
+        const method = 'GET';
+        const url = '/tweets';
+        const responseType = 'json';
+
+        xhr.responseType = responseType;
+        xhr.open(method, url);
+        xhr.onload = function () {
+            const serverResponse = xhr.response;
+            let listedItems = serverResponse.response;
+            let finalTweetStr= "";
+            let i;
+
+            for(i=0; i<listedItems.length; i++) {
+                let currentItem = formatTweetElement(listedItems[i])
+                finalTweetStr += currentItem
+            }
+
+            tweetsElement.innerHTML = finalTweetStr
+
+        };
+        xhr.send( )
+    }
+
+    loadTweets(tweetsEl);
 
     function handleDidLike(tweet_id, currentCount) {
         console.log(tweet_id, currentCount)
-
     }
 
     function LikeBtn(tweet) {
@@ -62,25 +98,6 @@
         return formattedTweet
     }
 
-    xhr.responseType = responseType;
-    xhr.open(method, url);
-    xhr.onload = function () {
-        console.log(xhr.response);
-        const serverResponse = xhr.response;
-        let listedItems = serverResponse.response;
-        let finalTweetStr= "";
-        let i;
-
-        for(i=0; i<listedItems.length; i++) {
-            console.log(listedItems[i]);
-            let currentItem = formatTweetElement(listedItems[i])
-            finalTweetStr += currentItem
-        }
-
-        tweetsElement.innerHTML = finalTweetStr
-
-    };
-    xhr.send( )
 
     </script>
 
