--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -17,7 +17,7 @@
             <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
                 {% csrf_token %}
                 <input type="hidden" value="/" name="next"/>
-                <textarea class="form-control" name="content" placeholder="Your tweet..."></textarea>
+                <textarea required="required" class="form-control" name="content" placeholder="Your tweet..."></textarea>
                 <button type="submit" class="btn btn-primary">Tweet</button>
 
             </form>
@@ -39,12 +39,21 @@
         const method = myForm.getAttribute("method");
 
         const xhr = new XMLHttpRequest();
+        const responseType = 'json';
+
+        xhr.responseType = responseType;
         xhr.open(method, url);
         xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest");
-        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+
         xhr.onload = function () {
-            const tweetsEl = document.getElementById("tweets");
-            loadTweets(tweetsEl);
+            if(xhr.status === 201) {
+                const newTweetJson = xhr.response;
+                const newTweetElement = formatTweetElement(newTweetJson);
+                const ogHtml = tweetsContainerElement.innerHTML;
+                tweetsContainerElement.innerHTML = newTweetElement + ogHtml;
+                myForm.reset()
+            }
         };
         xhr.send(myFormData)
     }
@@ -53,7 +62,7 @@
 
     tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit)
 
-    const tweetsEl = document.getElementById("tweets");
+    const tweetsContainerElement = document.getElementById("tweets");
 
     function loadTweets(tweetsElement) {
         const xhr = new XMLHttpRequest();
@@ -80,7 +89,7 @@
         xhr.send( )
     }
 
-    loadTweets(tweetsEl);
+    loadTweets(tweetsContainerElement);
 
     function handleDidLike(tweet_id, currentCount) {
         console.log(tweet_id, currentCount)
