--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -16,6 +16,10 @@
         <div class="col-md-4 mx-auto col-10">
             <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
                 {% csrf_token %}
+                <div class="d-none alert alert-danger" id="tweet-create-form-error">
+
+                </div>
+
                 <input type="hidden" value="/" name="next"/>
                 <textarea required="required" class="form-control" name="content" placeholder="Your tweet..."></textarea>
                 <button type="submit" class="btn btn-primary">Tweet</button>
@@ -30,6 +34,23 @@
     </div>
 
     <script>
+
+    function handleTweetFormError(msg, display) {
+
+        var myErrorDiv = document.getElementById("tweet-create-form-error");
+
+        if (display === true) {
+            // show error
+            myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+            myErrorDiv.innerText = msg;
+
+
+        } else {
+            // hide error
+            myErrorDiv.setAttribute("class", "d-none  alert alert-danger")
+
+        }
+    }
 
     function handleTweetCreateFormDidSubmit(event) {
         event.preventDefault();
@@ -48,13 +69,36 @@
 
         xhr.onload = function () {
             if(xhr.status === 201) {
+                handleTweetFormError("", false)
                 const newTweetJson = xhr.response;
                 const newTweetElement = formatTweetElement(newTweetJson);
                 const ogHtml = tweetsContainerElement.innerHTML;
                 tweetsContainerElement.innerHTML = newTweetElement + ogHtml;
                 myForm.reset()
+            } else if(xhr.status === 400) {
+                const errorJson = xhr.response;
+                const contentError = errorJson.content;
+                let contentErrorMsg;
+                if (contentError) {
+                    contentErrorMsg = contentError[0]
+                    if (contentErrorMsg) {
+                        handleTweetFormError(contentErrorMsg, true)
+                    }
+                    else {
+                        alert("An error occurred. Please try again.")
+                    }
+                } else {
+                    alert("An error occurred. Please try again.")
+                }
+            } else if(xhr.status === 500) {
+                alert("There was a server error. Please try again.")
             }
         };
+
+        xhr.onerror = function() {
+            alert("An error occurred. Please try again later.")
+        };
+
         xhr.send(myFormData)
     }
 
@@ -86,7 +130,7 @@
             tweetsElement.innerHTML = finalTweetStr
 
         };
-        xhr.send( )
+        xhr.send()
     }
 
     loadTweets(tweetsContainerElement);
