--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -92,7 +92,11 @@
                 }
             } else if(xhr.status === 500) {
                 alert("There was a server error. Please try again.")
+            } else if(xhr.status === 401) {
+                alert("You must log in!");
+                window.location.href = "/login";
             }
+
         };
 
         xhr.onerror = function() {
