--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -69,7 +69,7 @@
 
         xhr.onload = function () {
             if(xhr.status === 201) {
-                handleTweetFormError("", false)
+                handleTweetFormError("", false);
                 const newTweetJson = xhr.response;
                 const newTweetElement = formatTweetElement(newTweetJson);
                 const ogHtml = tweetsContainerElement.innerHTML;
@@ -80,7 +80,7 @@
                 const contentError = errorJson.content;
                 let contentErrorMsg;
                 if (contentError) {
-                    contentErrorMsg = contentError[0]
+                    contentErrorMsg = contentError[0];
                     if (contentErrorMsg) {
                         handleTweetFormError(contentErrorMsg, true)
                     }
@@ -122,7 +122,7 @@
         xhr.open(method, url);
         xhr.onload = function () {
             const serverResponse = xhr.response;
-            let listedItems = serverResponse.response;
+            let listedItems = serverResponse;
             let finalTweetStr= "";
             let i;
 
