--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -95,6 +95,9 @@
             } else if(xhr.status === 401) {
                 alert("You must log in!");
                 window.location.href = "/login";
+            } else if(xhr.status === 403) {
+                alert("You must log in!");
+                window.location.href = "/login";
             }
 
         };
