--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -35,13 +35,29 @@
 
     <script>
 
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
     function handleTweetFormError(msg, display) {
 
         var myErrorDiv = document.getElementById("tweet-create-form-error");
 
         if (display === true) {
             // show error
-            myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+            myErrorDiv.setAttribute("class", "d-block alert alert-danger");
             myErrorDiv.innerText = msg;
 
 
@@ -111,7 +127,7 @@
 
     const tweetCreateFormEl = document.getElementById("tweet-create-form");
 
-    tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit)
+    tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit);
 
     const tweetsContainerElement = document.getElementById("tweets");
 
@@ -130,7 +146,7 @@
             let i;
 
             for(i=0; i<listedItems.length; i++) {
-                let currentItem = formatTweetElement(listedItems[i])
+                let currentItem = formatTweetElement(listedItems[i]);
                 finalTweetStr += currentItem
             }
 
@@ -142,18 +158,51 @@
 
     loadTweets(tweetsContainerElement);
 
-    function handleDidLike(tweet_id, currentCount) {
-        console.log(tweet_id, currentCount)
+    function handleTweetActionBtn(tweet_id, currentCount, action) {
+        console.log(tweet_id, currentCount);
+        const url = "api/tweets/action";
+        const method = "POST";
+        const data = JSON.stringify({
+            id: tweet_id,
+            action: action
+        });
+        const xhr = new XMLHttpRequest();
+        const csrftoken = getCookie('csrftoken');
+        xhr.open(method, url);
+        xhr.setRequestHeader("Content-Type", "application/json");
+        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest");
+        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+
+        xhr.onload = function () {
+            const serverResponse = xhr.response;
+            console.log(serverResponse, xhr.status)
+            loadTweets(tweetsContainerElement)
+        };
+        xhr.send(data);
+
+
+    }
+
+    function RetweetBtn(tweet) {
+        return "<button class='btn btn-outline-primary btn-sm' onClick=handleTweetActionBtn(" + tweet.id  + "," + tweet.likes + ",'retweet')>Retweet</button>"
+    }
+
+    function UnlikeBtn(tweet) {
+        return "<button class='btn btn-outline-primary btn-sm' onClick=handleTweetActionBtn(" + tweet.id  + "," + tweet.likes + ",'unlike')>Unlike</button>"
     }
 
     function LikeBtn(tweet) {
-        return "<button class='btn btn-primary btn-sm' onClick=handleDidLike(" + tweet.id  + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
+        return "<button class='btn btn-primary btn-sm' onClick=handleTweetActionBtn(" + tweet.id  + "," + tweet.likes + ",'like')>" + tweet.likes + " Likes</button>"
     }
 
     function formatTweetElement(tweet) {
         let formattedTweet = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4' id='tweet-" + tweet.id
             +"'><p>" + tweet.content
-            + "</p><div class='btn-group'>" + LikeBtn(tweet)
+            + "</p><div class='btn-group'>"
+            + LikeBtn(tweet)
+            + UnlikeBtn(tweet)
+            + RetweetBtn(tweet)
             + "</div></div>";
         return formattedTweet
     }
