Work on retweet action

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -185,7 +185,7 @@
     }
 
     function RetweetBtn(tweet) {
-        return "<button class='btn btn-outline-primary btn-sm' onClick=handleTweetActionBtn(" + tweet.id  + "," + tweet.likes + ",'retweet')>Retweet</button>"
+        return "<button class='btn btn-outline-success btn-sm' onClick=handleTweetActionBtn(" + tweet.id  + "," + tweet.likes + ",'retweet')>Retweet</button>"
     }
 
     function UnlikeBtn(tweet) {
