--- a/templates/profiles/detail.html
+++ b/templates/profiles/detail.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div id="tweetme"
-     data-username="{{profile_username }}"
+     data-username="{{username}}"
      data-can-tweet="false"></div>
 {% endblock content %}
