--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -10,9 +10,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/global">Global</a>
+            </li>
             {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/profile/edit">Edit</a>
+                    <a class="nav-link" href="/profile/{{ user.username }}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profile/edit">Edit Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
